--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <img id="logo" src="img/logo-padrao.png" alt="Logomarca" class="logo">
+    <img src="https://i.ibb.co/89T9gGF/Background-Eraser-20240530-194623249.png" alt="Logomarca" class="logo">
 
 <h1><strong>Painel de vencimento</strong></h1>
     
