--- a/index.html
+++ b/index.html
@@ -1,20 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gerador de UUID</title>
+    <style>
+        body {
+            background-color: #000000;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        #uuid {
+            color: #ffffff;
+            font-size: 1.5em;
+            margin: 20px 0;
+            word-break: break-all;
+        }
+    </style>
+</head>
 <body>
-<h3>Hash da senha:</h3>
-<p id="resultado">Carregando...</p>
+    <h1>Gerador de UUID</h1>
+    <button onclick="displayUUID()">Gerar UUID</button>
+    <div id="uuid">Clique no botão para gerar um UUID.</div>
 
-<script>
-  async function gerarHash(texto) {
-    const encoder = new TextEncoder();
-    const data = encoder.encode(texto);
-    const hashBuffer = await crypto.subtle.digest("SHA-256", data);
-    const hashArray = Array.from(new Uint8Array(hashBuffer));
-    const hashHex = hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
-    document.getElementById("resultado").textContent = hashHex;
-  }
+    <script>
+        function generateUUID() {
+            // Função para gerar um UUID v4
+            return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+                const r = Math.random() * 16 | 0, v = c === 'x' ? r : (r & 0x3 | 0x8);
+                return v.toString(16);
+            });
+        }
 
-  gerarHash("Bruno@2026");
-</script>
+        function displayUUID() {
+            let uuid = localStorage.getItem('uuid');
+            if (!uuid) {
+                uuid = generateUUID();
+                localStorage.setItem('uuid', uuid);
+            }
+            document.getElementById('uuid').innerText = uuid;
+        }
+
+        // Exibe o UUID ao carregar a página, se já estiver armazenado
+        window.onload = function() {
+            displayUUID();
+        }
+    </script>
 </body>
 </html>
